fix: remove unwanted left margin by adding overflow hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,12 @@ a {
 /*==========================
 Global
 ==========================*/
+html,
+body {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   background: #d2d2d2;
 }
