--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -4,6 +4,12 @@ Global
 
 @use "../utils/variables" as *;
 
+html,
+body {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   background: $bg-color;
 }
